name:                cepher
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bahusvel/cepher#readme
license:             BSD3
license-file:        LICENSE
author:              Denis Lavrov
maintainer:          bahus.vel@gmail.com
copyright:           2017 Denis Lavrov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, bytestring, split, influxdb
  default-language:    Haskell2010

executable cepher-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, cepher
  default-language:    Haskell2010

test-suite cepher-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cepher
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bahusvel/cepher
